# pyintellicenter

./: CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  pyproject.toml
.github/workflows/: dependabot-automerge.yml  publish.yml  test.yml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  README.md  TROUBLESHOOTING.md  USAGE.md
scripts/: audit_attributes.py  discover_all_attributes.py  find_smart_valves.py  investigate_update_flag.py  show_new_attributes.py  show_valve_status.py  test_chem_attributes.py  test_discovery_live.py  test_setpoint_increments.py
src/pyintellicenter/: __init__.py  _light_group.py  attributes.py  connection.py  controller.py  discovery.py  exceptions.py  model.py  protocol.py
src/pyintellicenter/_mixins/: __init__.py  _base.py  body.py  chemistry.py  circuit_group.py  cover.py  heater.py  light.py  pump.py  schedule.py  sensor.py  system.py
src/pyintellicenter/attributes/: __init__.py  body.py  circuit.py  constants.py  equipment.py  misc.py  schedule.py  system.py
tests/: conftest.py  mock_server.py  test_circuit_group.py  test_connection.py  test_controller.py  test_controller_namespace_compat.py  test_dead_link_detection.py  test_discovery.py  test_integration.py  test_light_group_sync.py  test_mixin_helpers.py  test_model.py  test_protocol.py  test_reconnect_hardening.py  test_service_attr.py  test_typing_public_api.py  test_version.py
