[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyintellicenter"
version = "1.0.0"
description = "Python library for Pentair IntelliCenter pool control systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "joyfulhouse", email = "joyfulhouse@users.noreply.github.com" }
]
keywords = [
    "pentair",
    "intellicenter",
    "pool",
    "automation",
    "home-assistant",
    "asyncio",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "orjson>=3.11.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
    "mypy>=1.18.2",
]

[project.urls]
Homepage = "https://github.com/joyfulhouse/pyintellicenter"
Documentation = "https://github.com/joyfulhouse/pyintellicenter#readme"
Repository = "https://github.com/joyfulhouse/pyintellicenter.git"
Issues = "https://github.com/joyfulhouse/pyintellicenter/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyintellicenter"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "BLE",    # flake8-blind-except
    "LOG",    # flake8-logging
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pyintellicenter"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/pyintellicenter"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
